# Zuza

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: scrape-rossmann.yml
config/: settings.yaml
config/sites/: rossmann.yaml
docs/: ARCHITEKTURA.md
scraper/: alerts.py  browser.py  consent.py  diffing.py  extract.py  health.py  runner.py  storage.py  utils.py
